# llmir

./: .gitignore  AGENTS.md  Agent.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  KVCache_Design.md  MANIFEST.in  PAPER_VS_ACTUAL_VERIFICATION.md  README.md  TODO_KVCACHE_PHASE3.md  VALIDATION_REPORT.md  attention_optimization_test_report.md  comprehensive_benchmark.sh  docker-compose.yml  llmir_model_benchmark.py  parse_results.py  pyproject.toml  quick_benchmark.sh  run_benchmarks.sh  simple_attention_benchmark  simple_mqa_benchmark  simple_pruned_attention_benchmark.cpp  test_llmir_cpp  test_procedure.md  vllm_comparison.sh
IEEE-conference/: A800_GPU_TEST_RESULTS.md  FINAL_FIXES_SUMMARY.md  LLMIR-paper-ICCD2025-anonymous.aux  LLMIR-paper-ICCD2025-anonymous.tex  LLMIR-paper-ICCD2025-revised.tex  REVISION_NOTES.md  SUBMISSION_SUMMARY.md  TEST_VERIFICATION_REPORT.md  anonymization-checklist.md  create_llmir_system_diagram.py  submit-target.md
benchmark/: AttentionOptBenchmark.cpp  CMakeLists.txt  LargeModelBenchmark.cpp
benchmark/LLM/: .env  CMakeLists.txt  Dockerfile  README_LLAMA31.md  analyze_m3_results.py  analyze_results.py  build_m3_mac.sh  comprehensive_kvcache_benchmark.cpp  docker-compose.yml  docker_run_benchmark.sh  llama31_benchmark.py  llama3_kvcache_benchmark.cpp  run_kvcache_benchmark.sh  run_llama31_benchmark.sh  setup_llama31_benchmark.sh
benchmark/LLM/results/: benchmark_summary.txt  kvcache_benchmark_results.txt
benchmark/attention/: CMakeLists.txt  Makefile  README.md  flash_attn_benchmark  mqa_benchmark  parse_results.py  pruned_attn_benchmark  run_benchmarks.sh  simple_attention_benchmark.cpp  simple_mqa_benchmark.cpp  simple_pruned_attention_benchmark
benchmark/attention/results/: flash_attn_seq1024.txt  flash_attn_seq512.txt  mqa_seq1024.txt  mqa_seq128.txt  mqa_seq2048.txt  mqa_seq256.txt  pruned_attn_seq128.txt  pruned_attn_seq512.txt  pruned_attn_threshold0.1.txt  pruned_attn_topk32.txt
benchmark_results/: flash_attn_seq128.txt  flash_attn_seq2048.txt  flash_attn_seq256.txt  mqa_seq512.txt  pruned_attn_seq1024.txt  pruned_attn_seq2048.txt  pruned_attn_seq256.txt  pruned_attn_threshold0.001.txt  pruned_attn_threshold0.01.txt  pruned_attn_threshold0.05.txt  pruned_attn_topk128.txt  pruned_attn_topk256.txt  pruned_attn_topk64.txt
build_llm_dialect/: CMakeLists.txt
build_llm_dialect/tools/: llmir-opt.cpp
docs/: CAPABILITY_MATRIX.md  CI_WORKFLOW_INDEX.md  Compilation_Pipeline.md  DECODER_WORKLOAD_ARCHITECTURES.md  DEVELOPMENT_STATUS.md  E1_COMPILE_PASS_VERIFICATION.md  E2_PREFIX_SERVING_EVAL.md  E3_GPU_KV_INTEGRATION.md  E4_COMPOSITIONAL_VERIFICATION.md  E5_ABLATION.md  E6_BACKEND_PARITY.md  E8_EMPIRICAL_GPU_BENCH.md  E8_LAB_RUNBOOK.md  EVIDENCE_DASHBOARD.md  KVCACHE_README.md  LAB_CLOSURE_MATRIX.md  LAB_RUNBOOK.md  LLM_Dialect_Specification.md  LOOP_MILESTONE_STATUS.md  M5_LOWERED_HOT_PATH.md  M6_ARTIFACT_BUNDLE.md  MLIR_LIT_RUNBOOK.md  MLIR_LIT_SUITE.md  MLIR_NATIVE_BUILD.md  MVP_B_SHAREGPT_PREFIX.md  MVP_C_CUDA_KV.md  P5_CUDA_NATIVE.md  PAPER_REVISION_TRACEABILITY.md  PAPER_TOP_TIER_BAR.md  PHASE7_DESIGN.md  PYPI_RELEASE_CHECKLIST.md  PYPI_TRUSTED_PUBLISHER.md  PYTHON_VERSION_POLICY.md  README_KVCACHE.md  Static_Analysis.md  VLLM_KV_CONNECTOR.md  WALKTHROUGH.md  target.md
examples/: README.md  demo_llmir_0.6b.py  kv_cache_example.cpp  test_llmir_cpp.cpp  test_llmir_runtime.exp
lib/Dialect/LLM/Runtime/: AdaptiveBlockManager.cpp  AttentionOpt.cpp  CApi.cpp  CMakeLists.txt  CUDAKernels.cu  ContinuousBatching.cpp  DistributedKVCache.cpp  GPUMemoryUtils.cpp  KVCache.cpp  KVCacheRuntime.cpp  KVCacheSerialization.cpp  ModelOptimizations.cpp  MultiQueryAttention.cpp  PrefixCache.cpp  PrunedAttention.cpp  QuantizedKVCache.cpp  README.md  RuntimeInterfaces.cpp  SpeculativeKVCache.cpp  VLLMIntegration.cpp
llm_dialect_build/: CMakeLists.txt  test_llm_dialect.cpp
patches/: llmir_vllm_integration.patch
scripts/: README.md  build_mlir_opt.sh  build_native_runtime.sh  check_native_build_prereqs.sh  ci_lint_gate.sh  comprehensive_benchmark.sh  cpu_inference_compare.README.md  cpu_inference_compare.py  cpu_inference_compare.results.json  docker_run_benchmark.sh  e4_compositional_verify.py  e4_e5_multi_bucket_verify.py  e5_ablation_verify.py  e6_backend_parity_verify.py  e8_empirical_gpu_bench.py  e8_lab_preflight.sh  e8_lab_run.sh  e8_lab_smoke.sh  generate_evidence_dashboard.py  generate_paper_bucket_tables_tex.py  gpu_inference_compare.py  kv_backend_compare.py  lab_smoke_all.sh  lab_status_summary.py  llmir_model_benchmark.py  m5_lowered_hot_path_verify.py  mlir_lit_preflight.sh  mlir_lit_smoke.sh  mps_full_pipeline.py  mvp_a_single_layer_e2e.sh  mvp_c_cuda_kv_bench.py  package_native_lib.sh  paper_benchmark_collect.py  plot_from_results.py  prefix_cache_benchmark.py  prefix_prefill_e2e.py  prepare_release.sh  pypi_republish_preflight.sh  pyproject_tools.py  real_model_benchmark.py  (+15 more)
test/Dialect/LLM/Runtime/: CMakeLists.txt  KVCacheComprehensive_test.cpp  kv_cache_test.cpp  kv_cache_unit_test.cpp  run_kv_cache_unit_test.sh
tests/: __init__.py  conftest.py  test_artifact_bundle.py  test_ci_workflow_index.py  test_ci_workflows.py  test_compile_e2e.py  test_cpu_inference_compare.py  test_cuda_probe.py  test_decoder_workload_buckets.py  test_e2e_token_consistency.py  test_e4_compositional.py  test_e4_e5_multi_bucket.py  test_e5_ablation.py  test_e6_backend_parity.py  test_e8_empirical_gpu.py  test_e8_lab_smoke.py  test_evidence_dashboard.py  test_inference_compare.py  test_inference_device.py  test_integration_config.py  test_integration_hf.py  test_kv_cache.py  test_kv_factory.py  test_lab_closure_matrix.py  test_lab_runbook.py  test_lab_smoke_all.py  test_m5_lowered_hot_path.py  test_mlir_lit_suite.py  test_models.py  test_mvp_a_e2e.py  test_mvp_c_e2e.py  test_mvp_c_engine_device.py  test_nature_figures.py  test_paged_decoder.py  test_paged_decoder_prefix.py  test_paper_bucket_tables_tex.py  test_paper_traceability_lab.py  test_placeholder_backend_warning.py  test_prefix_cache_bench.py  test_prefix_kv_store.py  (+16 more)
unittests/: AttentionOpt_test.cpp  (+3 more)
(+184 files in other folders)
